--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>FarmsWorldGame</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
+
+    <!-- В раздел <head> -->
+<meta name="screen-orientation" content="portrait">
+<meta name="full-screen" content="yes">
+<meta name="x5-orientation" content="portrait">
+<meta name="x5-fullscreen" content="true">
+
     <style>
       /* Минимальные стили для предотвращения скачков контента */
       body, html {
