--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Farm World</title>
+    <title>FarmsWorldGame</title>
     
     <!-- Telegram Web App SDK (если нужно) -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -66,12 +66,12 @@
     <script>
         const buildUrl = "Build";
         const config = {
-            dataUrl: buildUrl + "/YOUR_GAME.data",
-            frameworkUrl: buildUrl + "/YOUR_GAME.framework.js",
-            codeUrl: buildUrl + "/YOUR_GAME.wasm",
+            dataUrl: buildUrl + "/Build.data",
+            frameworkUrl: buildUrl + "/Build.framework.js",
+            codeUrl: buildUrl + "/Build.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "YourCompany",
-            productName: "YourGame",
+            productName: "FarmsWorldGame",
             productVersion: "1.0",
             devicePixelRatio: window.devicePixelRatio || 1,
             matchWebGLToCanvasSize: true,
@@ -98,7 +98,7 @@
 
         // Initialize Unity
         const script = document.createElement('script');
-        script.src = buildUrl + "/YOUR_GAME.loader.js";
+        script.src = buildUrl + "/Build.loader.js";
         script.onload = () => {
             createUnityInstance(document.querySelector("#unity-canvas"), config, (progress) => {
                 document.querySelector("progress").value = progress;
